@@ -76,6 +76,10 @@
         <label>Display _quotes</label>
         <checkable>1</checkable>
       </object>
+      <object class="wxMenuItem" name="menu_lines">
+        <label>Display _line numbers</label>
+        <checkable>1</checkable>
+      </object>
       <style>wxMENU_TEAROFF</style>
     </object>
     <object class="wxMenu" name="menu_help2">
