@@ -5,6 +5,9 @@ Version 1.1.6
 - support for Windows XP native look&feel
 - Win32 version is now Unicode-enabled
 - fixes to the way multiline entries are stored in .po file
+- i18n support in the app itself (finally!)
+  (so far only Czech translation is available, translators welcome!)
+- an option to display .po file line numbers for catalog entries
 
 
 Version 1.1.5
